--- a/style.css
+++ b/style.css
@@ -21,11 +21,13 @@ body {
 
 .main {
     overflow: hidden;
+    width: 100%;
+    max-width: 600px;
 }
 
 .canvas-container {
     width: 100% !important; 
-    max-width: 100%;
+    max-width: 600px;
     height: auto;
     max-height: 75%;
 }
